# Ik2bCGA

./: .gitignore  CMakeLists.txt  Ik2bCGA.py  LICENSE.txt  README.md  SolverPx.py
include/: cga.h
include/gaalet/: gaalet.h
python/: Ik2bCGA.py  SolverPx.py  __init__.py
src/: CMakeLists.txt  cga.cpp  main.cpp
src/Ik2bCGA/: CMakeLists.txt  Ik2bCGA.cpp
src/gaalet_solver/: CMakeLists.txt  gaalet_solver.cpp
src/gaalet_tests/: CMakeLists.txt  main.cpp
src/gaalop_solver/: CMakeLists.txt  gaalop_solver.cpg  gaalop_util.cpg  proxy.cpp  proxy.h
src/gaalop_tests/: CMakeLists.txt  main.cpg
